--- a/flow-backend/package.json
+++ b/flow-backend/package.json
@@ -6,7 +6,9 @@
   "author": "koojaa",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.8",
